--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/sisodiya2421/lets-laugh#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "newrelic": "^7.1.1",
     "nodemon": "^2.0.7"
   }
 }
